--- a/branch/karaikudi.html
+++ b/branch/karaikudi.html
@@ -554,9 +554,9 @@
                 <div class="collapsible-content__inner">
                   <div class="footer__collapsible">
                     <li class="no-bullets site-footer__linklist">
-                      <li>NO. 111,</li>
-                      <li>Kalanivasal Pudu Road Melappakam,</li>
-                      <li>Karaikudi - 630001</li>
+                      <li>No.1270, Devakottai Main Rd</li>
+                      <li>Amaravathi Pudhur, Karaikudi</li>
+                      <li>TamilNadu - 630301</li>
                       <!-- <li><a href="../pages/contact.html">Store Location</a></li>
                       <li><a href="../pages/terms-and-conditions.html">Order & Return </a></li> -->
                       </li>
@@ -571,25 +571,25 @@
             <div class="grid__item">
               <div class="grid__item wide--one-half post-large--one-half large--one-half medium--grid__item small-grid__item">
                 <ul>
-                    <li> KAG </li> 
-                   <li> TECTON </li>
+                    <li><b>KAG</b></li> 
+                   <li><b>TECTON</b> </li>
                 </ul>
               </div>
               <div class="grid__item wide--one-half post-large--one-half large--one-half medium--grid__item small-grid__item">
                 <ul>
-                   <li>SAM SANITARYWARE</li>
-                    <li>CENTURYPLY</li>
+                   <li><b>SAM SANITARYWARE</b></li>
+                    <li><b>CENTURYPLY</b></li>
                 </ul>
               </div>
               <div class="grid__item wide--one-half post-large--one-half large--one-half medium--grid__item small-grid__item">
                 <ul>
-                   <li>GM</li>
+                   <li><b>GM</b></li>
                   
                 </ul>
               </div>
               <div class="grid__item wide--one-half post-large--one-half large--one-half medium--grid__item small-grid__item">
                 <ul>
-                   <li>ASIAN PAINT WOOD AND TILE ADHESIVE</li>
+                   <li><b>ASIAN PAINT WOOD AND TILE ADHESIVE</b></li>
                   
                 </ul>
               </div>
@@ -1098,9 +1098,9 @@
                 <div class="collapsible-content__inner">
                   <div class="footer__collapsible">
                     <ul class="no-bullets site-footer__linklist">
-                      <li>NO. 111,</li>
-                      <li>Kalanivasal Pudu Road Melappakam,</li>
-                      <li>Karaikudi - 630001</li>
+                      <li>No.1270, Devakottai Main Rd</li>
+                      <li>Amaravathi Pudhur, Karaikudi</li>
+                      <li>TamilNadu - 630301</li>
                       <!-- <li><a href="../pages/contact.html">Store Location</a></li>
                       <li><a href="../pages/terms-and-conditions.html">Order & Return </a></li> -->
                     </ul>
