--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@
   window.infinity_scroll_feature = false;
 </script>  
 </head>
-
 <body id="tileo" class="template-index  others ">
   <div class="shifter-page is-moved-by-drawer" id="PageContainer"> 
     <div id="PageContainer"></div>
@@ -194,9 +193,6 @@
                   .header-type-8 .menu-icon li a, .header-type-8 .header-mobile {color:#ffffff;}
                   .header-type-8 .menu-icon li a:hover, .header-type-8 .header-mobile:hover{color:#5f27fa;}
                   /* Header borders */
-
-
-
                   .header-type-8 ul.site-nav>li {border-left:1px solid rgba(0,0,0,0);}
                   .header-type-8 ul.site-nav>li:first-child { border-left:none;} 
                 }
@@ -216,7 +212,6 @@
               $(document).ready(function() {
                 appendPrependMenuMobile();
               });
-              
               var winWidth = $(window).innerWidth();
               $(window).on('resize', function () {
                 var resizeTimerId;
@@ -271,23 +266,22 @@
                                         </div>
                                         <ul class="site-nav-dropdown">
                                           <li class="menu-lv-2">
-
-                                            <a class="  " href="pages/about.html">
-
+                                            <a class="  " href="pages/KAG.html">
                                               KAG
                                             </a>
                                           </li>
                                           <li class="menu-lv-2">
-
-                                            <a class="  " href="./index/pages/services.html">
-
+                                            <a class="  " href="pages/photos.html">
                                               Tecton
                                             </a>
                                           </li>
                                           <li class="menu-lv-2">
-
+                                            <a class="  " href="pages/photos.html">
+                                              Lightning Product
+                                            </a>
+                                          </li>
+                                          <li class="menu-lv-2">
                                             <a class="  " href="pages/catalogue.html">
-
                                               Catalogue
                                             </a>
                                           </li>
@@ -338,7 +332,6 @@
                         </div>
                       </div>
                     </div>
-                      
                       <style>
         /*  Menu Lv 1  */
   
@@ -470,7 +463,10 @@
                     <img src="cdn.shopify.com/s/files/1/0437/5671/6194/files/slider1-bg-res_767x1cea.jpg?v=1596599351"  class="slide-img wide--hide post-large--hide large--hide" alt="" />
                     <div class="slider-content slider-content-bg">
                       <div class="slide_left">
-                        <h2 class="slide-heading animated" style="font-size: 60px; color:#ffffff;">
+                        <h2 class="slide-heading animated" style="font-size: 100px; color:#ffffff;">
+                          SAM GROUP OF COMPANIES                   
+                        </h2>
+                        <h2 class="slide-heading animated" style="font-size: 50px; color:#ffffff;">
                           We Provide Ultimate Wooden & Flooring Tiles Services                   
                         </h2>
                         <div class="slider_inner_block">
@@ -1125,9 +1121,9 @@
                 <div class="collapsible-content__inner">
                   <div class="footer__collapsible">
                     <ul class="no-bullets site-footer__linklist">
-                      <li>NO. 111,</li>
-                      <li>Kalanivasal Pudu Road Melappakam,</li>
-                      <li>Karaikudi - 630001</li>
+                      <li>No.1270, Devakottai Main Rd</li>
+                      <li>Amaravathi Pudhur, Karaikudi</li>
+                      <li>TamilNadu - 630301</li>
                       <!-- <li><a href="pages/contact.html">Store Location</a></li>
                       <li><a href="pages/terms-and-conditions.html">Order & Return </a></li> -->
                     </ul>
@@ -1178,7 +1174,7 @@
 
                     <li><a href="pages/about.html">About Us</a></li>
                     <li><a href="pages/photos.html">Gallery</a></li>
-                    <li><a href="#">Catalogue</a></li>
+                    <li><a href="pages/catalogue.html">Catalogue</a></li>
                     <!-- <li><a href="pages/privacy-policy.html">Privacy Policy</a></li>
                     <li><a href="pages/privacy-policy.html">Shipping Details</a></li> -->
                   </ul>
