--- a/pages/catalogue.html
+++ b/pages/catalogue.html
@@ -1023,9 +1023,9 @@
                   <div class="collapsible-content__inner">
                     <div class="footer__collapsible">
                       <ul class="no-bullets site-footer__linklist">
-                        <li>NO. 111,</li>
-                        <li>Kalanivasal Pudu Road Melappakam,</li>
-                        <li>Karaikudi - 630001</li>
+                        <li>No.1270, Devakottai Main Rd</li>
+                        <li>Amaravathi Pudhur, Karaikudi</li>
+                        <li>TamilNadu - 630301</li>
                         <!-- <li><a href="pages/contact.html">Store Location</a></li>
                         <li><a href="pages/terms-and-conditions.html">Order & Return </a></li> -->
                       </ul>
