--- a/pages/about.html
+++ b/pages/about.html
@@ -288,18 +288,43 @@
                                         </div>
                                         <ul class="site-nav-dropdown">
                                           <li class="menu-lv-2">
-                                            <a class="  " href="kag.html">
-                                              KAG
+                                            <a class="  " href="../products/kagtiles.html">
+                                              KAG TILES
                                             </a>
                                           </li>
                                           <li class="menu-lv-2">
-                                            <a class="  " href="tecton.html">
-                                              Tecton
+                                            <a class="  " href="../products/samsanitaryware.html">
+                                              SAM SANITARYWARE
                                             </a>
                                           </li>
                                           <li class="menu-lv-2">
-                                            <a class="  " href="catalogue.html">
-                                              Catalogue
+                                            <a class="  " href="../products/asianpaintsadhesives.html">
+                                              ASIAN PAINTS ADHESIVES
+                                            </a>
+                                          </li>
+                                          <li class="menu-lv-2">
+                                            <a class="  " href="../products/gmswitches.html">
+                                              GM SWITCHES
+                                            </a>
+                                          </li>
+                                          <li class="menu-lv-2">
+                                            <a class="  " href="../products/cromptonfans.html">
+                                              CROMPTON FANS
+                                            </a>
+                                          </li>
+                                          <li class="menu-lv-2">
+                                            <a class="  " href="../products/centuryply.html">
+                                              CENTURPLY
+                                            </a>
+                                          </li>
+                                          <li class="menu-lv-2">
+                                            <a class="  " href="../products/bajajhomeappliance.html">
+                                              BAJAJ HOME APPLIANCE
+                                            </a>
+                                          </li>
+                                          <li class="menu-lv-2">
+                                            <a class="  " href="../pages/catalogue.html">
+                                              CATALOGUE
                                             </a>
                                           </li>
                                         </ul>
@@ -502,16 +527,14 @@
 
                           <div
                             class="grid__item wide--one-half post-large--one-half large--one-half medium--grid__item small-grid__item">
-                            <h2 style="color:#8a704d">Our Mission</h2>
+                            <h2 style="color:#8a704d">SAM GROUP OF COMPANIES</h2>
 
-                            <p style="text-align: justify; color:#878787">We are the Authorised Distributor of KAG&TECTON Products. KAG Tiles
-                              a Division of 20 year renowned Multicrore Group Company KAG INDIA PVT. Ltd., head
-                              quartered at chennai INDIA is moving ahead keeping in mind the Darwin principle responding
-                              and adopting to the changing needs in the competitive scenario. .As one of the oldest home
-                              and office remodeling companies in the city, we have a very special feeling that our duty
-                              is to be the best!.Sam ceramics is famous for its lowest price and best quality.Sam
-                              Ceramics is started in 2017 at Amaravathiputhur. We are a authorised distributer of KAG
-                              and Tecton brands.</p>
+                            <p style="text-align: justify; color:#878787">SAM GROUP OF COMPANIES embarked SAM BUILDERS in 2017 and kick started the first project in PUDHUVAYAL.
+                            SAM GROUP OF COMPANIES inagruated SAM CERAMICS, tiles and sanitaryware showroom at AMARAVATHI PUDHUR in the year 2017 and we hold the distributor rights of 
+                            KAG and TECTON tiles across SIVAGANGAI district. SAM CERAMICS inaugurated a branch as SAM HINDUSTAN CERAMICS at PUDHUKOTTAI in the year 2019.
+                            As a milestone, SAM GROUP OF COMPANIES inaugurated SAM HOME DECORS, A showroom for hardwares and interior lights at AMARAVATHI PUDHUR in the year 2019.
+                            SAM CERAMICS fascinated around 10000 customers in a year of journey, which is one of our best momentum.
+                            <br> <b>Our vision is to provide quality home decors with affordable price across India.</b></p>
 
                             <!-- <div class="grid__item">
                               <div
@@ -960,7 +983,7 @@
                 </style>
                 <div class="footer__logo">
                   <a href="../index.html">
-                    <img style="align-items: center; align-content: center;" src="../img/sam.png" alt="Sam Ceramics">
+                    <img style="align-items: center; height: 50%; width: 65%;" src="../img/sam.png" alt="Sam Ceramics">
                     <img src="../img/name.png" alt="Sam Ceramics">
                   </a>
                 </div>
