--- a/pages/photos.html
+++ b/pages/photos.html
@@ -408,18 +408,43 @@
                                           </div>
                                           <ul class="site-nav-dropdown">
                                             <li class="menu-lv-2">
-                                              <a class="  " href="kag.html">
-                                                KAG
+                                              <a class="  " href="../products/kagtiles.html">
+                                                KAG TILES
                                               </a>
                                             </li>
                                             <li class="menu-lv-2">
-                                              <a class="  " href="tecton.html">
-                                                Tecton
+                                              <a class="  " href="../products/samsanitaryware.html">
+                                                SAM SANITARYWARE
                                               </a>
                                             </li>
                                             <li class="menu-lv-2">
-                                              <a class="  " href="catalogue.html">
-                                                Catalogue
+                                              <a class="  " href="../products/asianpaintsadhesives.html">
+                                                ASIAN PAINTS ADHESIVES
+                                              </a>
+                                            </li>
+                                            <li class="menu-lv-2">
+                                              <a class="  " href="../products/gmswitches.html">
+                                                GM SWITCHES
+                                              </a>
+                                            </li>
+                                            <li class="menu-lv-2">
+                                              <a class="  " href="../products/cromptonfans.html">
+                                                CROMPTON FANS
+                                              </a>
+                                            </li>
+                                            <li class="menu-lv-2">
+                                              <a class="  " href="../products/centuryply.html">
+                                                CENTURPLY
+                                              </a>
+                                            </li>
+                                            <li class="menu-lv-2">
+                                              <a class="  " href="../products/bajajhomeappliance.html">
+                                                BAJAJ HOME APPLIANCE
+                                              </a>
+                                            </li>
+                                            <li class="menu-lv-2">
+                                              <a class="  " href="../pages/catalogue.html">
+                                                CATALOGUE
                                               </a>
                                             </li>
                                           </ul>
@@ -927,7 +952,7 @@
                 <div class="border-title">
                   <!-- <div class="short-desc"><p style="color:#303030;">Visit Our Online Store</p></div> -->
                   <h2 class="section-header__title" style="color:#8a704d;">
-                    Lightning Product
+                    Lighting Product
                   </h2>
                 </div>
               </div>
@@ -1210,7 +1235,7 @@
                   </style>
                   <div class="footer__logo">
                     <a href="../index.html">
-                      <img style="align-items: center; align-content: center;" src="../img/sam.png" alt="Sam Ceramics">
+                      <img style="height: 50%; width: 65%;" src="../img/sam.png" alt="Sam Ceramics">
                       <img src="../img/name.png" alt="Sam Ceramics">
                     </a>
                   </div>
