--- a/products/gmswitches.html
+++ b/products/gmswitches.html
@@ -1,16 +1,6 @@
 <!doctype html>
-<!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
-<!--[if IE 7]><html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
-<!--[if IE 8]><html class="no-js lt-ie9" lang="en"> <![endif]-->
-<!--[if IE 9 ]><html class="ie9 no-js"> <![endif]-->
-<!--[if (gt IE 9)|!(IE)]><!-->
 <html class="no-js">
-<!--<![endif]-->
-
-<!-- Mirrored from tileo.myshopify.com/collections/flooring-products by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 31 Oct 2020 02:51:39 GMT -->
-<!-- Added by HTTrack -->
-<meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
-
+<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <head>
 
   <!-- Basic page needs ================================================== -->
@@ -20,7 +10,7 @@
   <link rel="shortcut icon" href="../img/sam.png" type="image/png" />
   <!-- Title and description ================================================== -->
   <title>
-    SAM Ceramics | Products - TECTON
+    SAM Ceramics | Products - GM SWITCHES
   </title>
 
   <!-- Social meta ================================================== -->
@@ -385,7 +375,7 @@
                                         </a>
                                       </li>
                                       <li class="menu-lv-1 item">
-                                        <a class="menu__moblie" href="about.html">
+                                        <a class="menu__moblie" href="../pages/about.html">
                                           About Us
                                           <!-- <span class="icon-dropdown" data-toggle-menu-mb>
                                           <i class="fa fa-angle-right" aria-hidden="true"></i>
@@ -408,18 +398,43 @@
                                           </div>
                                           <ul class="site-nav-dropdown">
                                             <li class="menu-lv-2">
-                                              <a class="  " href="kag.html">
-                                                KAG
+                                              <a class="  " href="kagtiles.html">
+                                                KAG TILES
                                               </a>
                                             </li>
                                             <li class="menu-lv-2">
-                                              <a class="  " href="tecton.html">
-                                                Tecton
+                                              <a class="  " href="samsanitaryware.html">
+                                                SAM SANITARYWARE
                                               </a>
                                             </li>
                                             <li class="menu-lv-2">
-                                              <a class="  " href="catalogue.html">
-                                                Catalogue
+                                              <a class="  " href="asianpaintsadhesives.html">
+                                                ASIAN PAINTS ADHESIVES
+                                              </a>
+                                            </li>
+                                            <li class="menu-lv-2">
+                                              <a class="  " href="gmswitches.html">
+                                                GM SWITCHES
+                                              </a>
+                                            </li>
+                                            <li class="menu-lv-2">
+                                              <a class="  " href="cromptonfans.html">
+                                                CROMPTON FANS
+                                              </a>
+                                            </li>
+                                            <li class="menu-lv-2">
+                                              <a class="  " href="centuryply.html">
+                                                CENTURPLY
+                                              </a>
+                                            </li>
+                                            <li class="menu-lv-2">
+                                              <a class="  " href="bajajhomeappliance.html">
+                                                BAJAJ HOME APPLIANCE
+                                              </a>
+                                            </li>
+                                            <li class="menu-lv-2">
+                                              <a class="  " href="../pages/catalogue.html">
+                                                CATALOGUE
                                               </a>
                                             </li>
                                           </ul>
@@ -442,12 +457,12 @@
                                           <ul class="site-nav-dropdown">
                                             <li class="menu-lv-2">
 
-                                              <a class="  " href="photos.html">
+                                              <a class="  " href="../pages/photos.html">
                                                 Photos
                                               </a>
                                             </li>
                                             <li class="menu-lv-2">
-                                              <a class="  " href="videos.html">
+                                              <a class="  " href="../pages/videos.html">
                                                 Videos
                                               </a>
                                             </li>
@@ -456,7 +471,7 @@
                                         </div>
                                       </li>
                                       <li class="menu-lv-1 item">
-                                        <a class="menu__mobile" href="contact.html">
+                                        <a class="menu__mobile" href="../pages/contact.html">
                                           Contact
                                         </a>
                                       </li>
@@ -587,12 +602,12 @@
       <div class="container-bg">
 
 
-        <h1>KAG PRODUCT</h1>
+        <h1> GM SWITCHES</h1>
         <a href="../index.html" title="Back to the frontpage">Home</a>
 
         <span aria-hidden="true" class="breadcrumb__sep">&#47;</span>
 
-        <span>Gallery&nbsp;&#47;&nbsp;KAG</span>
+        <span>Product&nbsp;&#47;&nbsp;GM Switches</span>
 
 
 
@@ -946,7 +961,7 @@
                   </style>
                   <div class="footer__logo">
                     <a href="../index.html">
-                      <img style="align-items: center; align-content: center;" src="../img/sam.png" alt="Sam Ceramics">
+                      <img style="height: 50%; width: 65%;" src="../img/sam.png" alt="Sam Ceramics">
                       <img src="../img/name.png" alt="Sam Ceramics">
                     </a>
                   </div>
@@ -995,8 +1010,8 @@
                 <div class="collapsible-content__inner">
                   <div class="footer__collapsible">
                     <ul class="no-bullets site-footer__linklist">
-                      <li>Devakottai Main Rd</li>
-                      <li>Amaravathi, Karaikudi</li>
+                      <li>No.1270, Devakottai Main Rd</li>
+                      <li>Amaravathi Pudhur, Karaikudi</li>
                       <li>TamilNadu - 630301</li>
                       <!-- <li><a href="pages/contact.html">Store Location</a></li>
                       <li><a href="pages/terms-and-conditions.html">Order & Return </a></li> -->
@@ -1046,9 +1061,9 @@
                   <div class="footer__collapsible">
                     <ul class="no-bullets site-footer__linklist">
 
-                      <li><a href="about.html">About Us</a></li>
-                      <li><a href="#">Gallery</a></li>
-                      <li><a href="catalogue.html">Catalogue</a></li>
+                      <li><a href="../pages/about.html">About Us</a></li>
+                      <li><a href="../pages/photos.html">Gallery</a></li>
+                      <li><a href="../pages/catalogue.html">Catalogue</a></li>
                       <!-- <li><a href="pages/privacy-policy.html">Privacy Policy</a></li>
                     <li><a href="pages/privacy-policy.html">Shipping Details</a></li> -->
                     </ul>
