--- a/branch/pudukkottai.html
+++ b/branch/pudukkottai.html
@@ -266,18 +266,43 @@
                                         </div>
                                         <ul class="site-nav-dropdown">
                                           <li class="menu-lv-2">
-                                            <a class="  " href="../pages/about.html">
-                                              KAG
+                                            <a class="  " href="../products/kagtiles.html">
+                                              KAG TILES
                                             </a>
                                           </li>
                                           <li class="menu-lv-2">
-                                            <a class="  " href="../pages/services.html">
-                                              Tecton
+                                            <a class="  " href="../products/samsanitaryware.html">
+                                              SAM SANITARYWARE
+                                            </a>
+                                          </li>
+                                          <li class="menu-lv-2">
+                                            <a class="  " href="../products/asianpaintsadhesives.html">
+                                              ASIAN PAINTS ADHESIVES
+                                            </a>
+                                          </li>
+                                          <li class="menu-lv-2">
+                                            <a class="  " href="../products/gmswitches.html">
+                                              GM SWITCHES
+                                            </a>
+                                          </li>
+                                          <li class="menu-lv-2">
+                                            <a class="  " href="../products/cromptonfans.html">
+                                              CROMPTON FANS
+                                            </a>
+                                          </li>
+                                          <li class="menu-lv-2">
+                                            <a class="  " href="../products/centuryply.html">
+                                              CENTURPLY
+                                            </a>
+                                          </li>
+                                          <li class="menu-lv-2">
+                                            <a class="  " href="../products/bajajhomeappliance.html">
+                                              BAJAJ HOME APPLIANCE
                                             </a>
                                           </li>
                                           <li class="menu-lv-2">
                                             <a class="  " href="../pages/catalogue.html">
-                                              Catalogue
+                                              CATALOGUE
                                             </a>
                                           </li>
                                         </ul>
