--- a/index.html
+++ b/index.html
@@ -266,23 +266,43 @@
                                         </div>
                                         <ul class="site-nav-dropdown">
                                           <li class="menu-lv-2">
-                                            <a class="  " href="pages/KAG.html">
-                                              KAG
+                                            <a class="  " href="products/kagtiles.html">
+                                              KAG TILES
                                             </a>
                                           </li>
                                           <li class="menu-lv-2">
-                                            <a class="  " href="pages/photos.html">
-                                              Tecton
+                                            <a class="  " href="products/samsanitaryware.html">
+                                              SAM SANITARYWARE
                                             </a>
                                           </li>
                                           <li class="menu-lv-2">
-                                            <a class="  " href="pages/photos.html">
-                                              Lightning Product
+                                            <a class="  " href="products/asianpaintsadhesives.html">
+                                              ASIAN PAINTS ADHESIVES
+                                            </a>
+                                          </li>
+                                          <li class="menu-lv-2">
+                                            <a class="  " href="products/gmswitches.html">
+                                              GM SWITCHES
+                                            </a>
+                                          </li>
+                                          <li class="menu-lv-2">
+                                            <a class="  " href="products/cromptonfans.html">
+                                              CROMPTON FANS
+                                            </a>
+                                          </li>
+                                          <li class="menu-lv-2">
+                                            <a class="  " href="products/centuryply.html">
+                                              CENTURPLY
+                                            </a>
+                                          </li>
+                                          <li class="menu-lv-2">
+                                            <a class="  " href="products/bajajhomeappliance.html">
+                                              BAJAJ HOME APPLIANCE
                                             </a>
                                           </li>
                                           <li class="menu-lv-2">
                                             <a class="  " href="pages/catalogue.html">
-                                              Catalogue
+                                              CATALOGUE
                                             </a>
                                           </li>
                                         </ul>
@@ -481,7 +501,7 @@
                     .slider_style_3 .slide-offer-text span {color: #ffffff!important;}
                     @media screen and (min-width: 320px) and (max-width: 767px){
 
-                      .slider_style_3.slider-1596439642225-list .slider-content {background:rgba(0, 0, 0, 0.85);}
+                      /* .slider_style_3.slider-1596439642225-list .slider-content {background:rgba(0, 0, 0, 0.85);} */
 
                       }
                     </style>
@@ -492,7 +512,7 @@
                       <img src="cdn.shopify.com/s/files/1/0437/5671/6194/files/slider2-bg-res_767xec40.jpg?v=1596599282"  class="slide-img wide--hide post-large--hide large--hide" alt="" />
                       <div class="slider-content slider-content-bg">
                         <div class="slide_left">
-                          <h2 class="slide-heading animated" style="font-size: 60px; color:#1f1f1f;">Taking flooring to <br> another level</h2>
+                          <h2 class="slide-heading animated" style="font-size: 60px; color:#1f1f1f;">Your Dreams Fulfill <br> with us</h2>
                           <div class="slider_inner_block">
                             <a href="pages/photos.html" class="slide-button animated btn">View Gallery</a>
 
@@ -563,7 +583,7 @@
                     <div class="grid__item wide--one-third post-large--one-third large--one-third two-blocks">
                       <div class="overlay style_1">
                         <div class="featured-image">
-                          <a class="banner_half_img" href="collections/floor-tiles.html">
+                          <a class="banner_half_img" href="branch/karaikudi.html">
                             <img src="cdn.shopify.com/s/files/1/0437/5671/6194/files/featured-img2_1000X9d40.jpg?v=1596447519" alt="Stylish Wooden Tiles">
                           </a>
                         </div>
@@ -577,7 +597,7 @@
                     <div class="grid__item wide--one-third post-large--one-third large--one-third two-blocks">
                       <div class="overlay style_1">
                         <div class="featured-image">
-                          <a class="banner_half_img" href="collections/bathroom-tiles.html">
+                          <a class="banner_half_img" href="branch/pudukkottai.html">
                             <img src="cdn.shopify.com/s/files/1/0437/5671/6194/files/featured-img1_1000Xc7b3.jpg?v=1596443148" alt="Stylish Ceramic Tiles">
                           </a>
                         </div>
@@ -591,7 +611,7 @@
                     <div class="grid__item wide--one-third post-large--one-third large--one-third two-blocks">
                       <div class="overlay style_1">
                         <div class="featured-image">
-                          <a class="banner_half_img" href="collections/floor-tiles.html">
+                          <a class="banner_half_img" href="branch/thirupathur.html">
                             <img src="cdn.shopify.com/s/files/1/0437/5671/6194/files/featured-img2_1000X9d40.jpg?v=1596447519" alt="Stylish Wooden Tiles">
                           </a>
                         </div>
@@ -1072,7 +1092,7 @@
                 </style>
                 <div class="footer__logo">
                   <a href="index.html">
-                    <img style="align-items: center; align-content: center;" src="img/sam.png" alt="Sam Ceramics">
+                    <img style="height: 50%; width: 65%;" src="img/sam.png" alt="Sam Ceramics">
                     <img src="img/name.png" alt="Sam Ceramics">
                   </a>
                 </div>
