home slider & catalogue updated

--- a/branch/thirupathur.html
+++ b/branch/thirupathur.html
@@ -566,12 +566,12 @@
         <div class="grid__item">
           <div class="grid__item wide--one-half post-large--one-half large--one-half medium--grid__item small-grid__item">
             <div class="section-two-leftimg">
-              <img src="./img/svg1.jpeg" alt="" style="width: 95%;"/> 
+              <img src="../img/building.jpg" alt="" style="width: 95%;"/> 
             </div>
           </div>
          
           <div class="grid__item wide--one-half post-large--one-half large--one-half medium--grid__item small-grid__item">
-               <h2 style="color:#8a704d">LOOK @ THIRUPATHUR SHOWROOM</h2> 
+               <h2 style="color:#8a704d">Coming Soon</h2> 
                <div  class="grid__item large--one-half medium--one-half footer__item--1596278314761 footer-links">
                 <h4 class="footer__title ">
                   Our Location
@@ -675,14 +675,14 @@
       #shopify-section-1596277330278.home-grid-banner .featured-content.oneimage-1596277330278-1 .btn1:hover { color:#fff !important; background-color:#a58050 !important; }
       </style>
       </div>
-      <div id="shopify-section-1596277361174" class="shopify-section index-section home-product-grid">
+      <!-- <div id="shopify-section-1596277361174" class="shopify-section index-section home-product-grid">
         <div class="product-grid-block" style="margin-top:0px; margin-bottom:0px;float:left;width:100%; background-color:#f4efec;">
           <div class="container">
             <div class="dt-sc-hr-invisible-large"></div>
             <div class="product-block-inner">
               <div class="section-header section-header--small full-position-default">
                 <div class="border-title">
-                  <!-- <div class="short-desc"><p style="color:#303030;">Visit Our Online Store</p></div> -->
+                  <div class="short-desc"><p style="color:#303030;">Visit Our Online Store</p></div>
                   <h2 class="section-header__title" style="color:#8a704d;">
                     Our Products
                   </h2>
@@ -802,11 +802,11 @@
                 </div>
               </div>
             </div>
-            <!-- <div class="dt-sc-hr-invisible-medium"></div> -->
+            <div class="dt-sc-hr-invisible-medium"></div>
           </div>
         </div>
         <style></style>
-      </div>
+      </div> -->
 
 
         <!-- <div id="shopify-section-1596278049312" class="shopify-section index-section client-logo">
