--- a/index.html
+++ b/index.html
@@ -484,10 +484,10 @@
                     <div class="slider-content slider-content-bg">
                       <div class="slide_left">
                         <h2 class="slide-heading animated" style="font-size: 100px; color:#ffffff;">
-                          SAM GROUP OF COMPANIES                   
+                          SAM CERAMICS                  
                         </h2>
                         <h2 class="slide-heading animated" style="font-size: 50px; color:#ffffff;">
-                          We Provide Ultimate Wooden & Flooring Tiles Services                   
+                          Your dreams fulfill with us                  
                         </h2>
                         <div class="slider_inner_block">
 
@@ -506,6 +506,31 @@
                       }
                     </style>
                     </div>
+                    <div class="slick-list slider_style_3 slider-1596439642225-list">                
+                      <img src="img/homeslider3.jpg"  class="slide-img medium-down--hide" alt="" />
+                      <img src="img/homeslider3.jpg"  class="slide-img wide--hide post-large--hide large--hide" alt="" />
+                      <div class="slider-content slider-content-bg">
+                        <div class="slide_left">
+                          <h2 class="slide-heading animated" style="font-size: 100px; color:#ffffff;">
+                            SAM HOME DECORS                 
+                          </h2>
+                          <h2 class="slide-heading animated" style="font-size: 50px; color:#ffffff;">
+                            Bring the sunshine to your home               
+                          </h2>
+                          <div class="slider_inner_block">
+                            <a href="pages/photos.html" class="slide-button animated btn">View Gallery</a>
+                          </div>
+                        </div>
+                      </div>
+  
+                      <style>
+                      .slider_style_3 .slide-offer-text span {color: #ffffff!important;}
+                      @media screen and (min-width: 320px) and (max-width: 767px){
+  
+                        /* .slider_style_3.slider-1596439642225-list .slider-content {background:rgba(0, 0, 0, 0.85);} */
+                        }
+                      </style>
+                    </div>
                   
                   <div class="slick-list slider_style_1 slider-1592399068412-list"> 
                       <img src="cdn.shopify.com/s/files/1/0437/5671/6194/files/slider2-bg_2000x37b2.jpg?v=1596599165"  class="slide-img medium-down--hide" alt="" />
@@ -515,7 +540,6 @@
                           <h2 class="slide-heading animated" style="font-size: 60px; color:#1f1f1f;">Your Dreams Fulfill <br> with us</h2>
                           <div class="slider_inner_block">
                             <a href="pages/photos.html" class="slide-button animated btn">View Gallery</a>
-
                           </div>
                         </div>
                       </div>
@@ -528,7 +552,6 @@
                         /* .slider_style_1.slider-1592399068412-list .slider-content {background:rgba(248, 244, 244, 0.85);} */
 
                       }
-
                     </style>
                     </div>
                   <div class="slick-list slider_style_2 slider-1592399153626-list">
@@ -650,7 +673,7 @@
                       <div class="border-title">
                         <!-- <div class="short-desc"><p style="color:#303030;">Visit Our Online Store</p></div> -->
                         <h2 class="section-header__title" style="color:#8a704d;">
-                          Flooring Products
+                          Products
                         </h2>
                       </div>
                     </div>
@@ -659,39 +682,52 @@
                         <div class="product-block load-wrapper ">
                           <ul class="grid-uniform">
 
+                            <li class="grid__item item-row wide--one-quarter post-large--one-quarter large--one-quarter medium--one-half small--one-half  medium--one-half small--one-half  " id="product-5617868144802"  id="product-5617868144802">
+                              <div class="products product-hover-11">
+                                <div class="product-container">
+                                  <a>
+                                    <div class="reveal"> 
+                                      <img src="img/Gallery/kagtiles/kagtiles1.jpg" class="featured-image" alt="Galaxy Tiles">
+                                      <img  src="img/KAG.png" class="hidden-feature_img" alt="Glazed Vitrified Tiles" />
+                                    </div> 
+                                  </a>
+                                </div>
+                              </div>
+                            </li>
+                            
                             <li class="grid__item item-row wide--one-quarter post-large--one-quarter large--one-quarter medium--one-half small--one-half  medium--one-half small--one-half  " id="product-5617711743138"  id="product-5617711743138">
                               <div class="products product-hover-11">
                                 <div class="product-container">
                                   <a>
                                     <div class="reveal">
-                                          <img src="cdn.shopify.com/s/files/1/0437/5671/6194/products/Product5_large00d1.jpg?v=1597918329" class="featured-image" alt="Glazed Vitrified Tiles">
-                                          <img  src="img/KAG.png" class="hidden-feature_img" alt="Glazed Vitrified Tiles" />
+                                          <img src="img/Gallery/hometile2.jpeg" class="featured-image" alt="Glazed Vitrified Tiles">
+                                          <img  src="img/sam.png" class="hidden-feature_img" alt="Glazed Vitrified Tiles" />
                                     </div>
                                   </a>
                                 </div>
                               </div>
                             </li>
 
-                            <li class="grid__item item-row wide--one-quarter post-large--one-quarter large--one-quarter medium--one-half small--one-half  medium--one-half small--one-half  " id="product-5617934532770"  id="product-5617934532770">
+                            <li class="grid__item item-row wide--one-quarter post-large--one-quarter large--one-quarter medium--one-half small--one-half  medium--one-half small--one-half  " id="product-5617711743138"  id="product-5617711743138">
                               <div class="products product-hover-11">
                                 <div class="product-container">
                                   <a>
                                     <div class="reveal">
-                                      <img src="cdn.shopify.com/s/files/1/0437/5671/6194/products/Product19_5c96265c-bc0f-4fe7-a5bc-047adee512c1_large6fb6.jpg?v=1597922267" class="featured-image" alt="Imperial Red">
-                                      <img  src="img/KAG.png" class="hidden-feature_img" alt="Glazed Vitrified Tiles" />
+                                          <img src="img/Gallery/hometile3.jpeg" class="featured-image" alt="Glazed Vitrified Tiles">
+                                          <img  src="img/sam.png" class="hidden-feature_img" alt="Glazed Vitrified Tiles" />
                                     </div>
                                   </a>
                                 </div>
                               </div>
-                            </li>
+                            </li> 
 
-                            <li class="grid__item item-row wide--one-quarter post-large--one-quarter large--one-quarter medium--one-half small--one-half  medium--one-half small--one-half  " id="product-5617711055010"  id="product-5617711055010">
+                            <li class="grid__item item-row wide--one-quarter post-large--one-quarter large--one-quarter medium--one-half small--one-half  medium--one-half small--one-half  " id="product-5617711743138"  id="product-5617711743138">
                               <div class="products product-hover-11">
                                 <div class="product-container">
                                   <a>
                                     <div class="reveal">
-                                      <img src="cdn.shopify.com/s/files/1/0437/5671/6194/products/Product3_large6042.jpg?v=1597917902" class="featured-image" alt="Ceramic Floor Tiles">
-                                      <img  src="img/KAG.png" class="hidden-feature_img" alt="Glazed Vitrified Tiles" />
+                                          <img src="img/Gallery/hometile4.jpeg" class="featured-image" alt="Glazed Vitrified Tiles">
+                                          <img  src="img/sam.png" class="hidden-feature_img" alt="Glazed Vitrified Tiles" />
                                     </div>
                                   </a>
                                 </div>
@@ -703,7 +739,7 @@
                                 <div class="product-container">
                                   <a>
                                     <div class="reveal"> 
-                                      <img src="cdn.shopify.com/s/files/1/0437/5671/6194/products/Product18_459ab3cf-f025-4964-8047-161aef3417cf_largeb10c.jpg?v=1597921991" class="featured-image" alt="Rossa Verona">
+                                      <img src="img/Gallery/kagtiles/kagtiles5.jpg" class="featured-image" alt="Galaxy Tiles">
                                       <img  src="img/KAG.png" class="hidden-feature_img" alt="Glazed Vitrified Tiles" />
                                     </div> 
                                   </a>
@@ -716,20 +752,7 @@
                                 <div class="product-container">
                                   <a>
                                     <div class="reveal"> 
-                                      <img src="cdn.shopify.com/s/files/1/0437/5671/6194/products/Product2_large69e4.jpg?v=1597918195" class="featured-image" alt="Galaxy Tiles">
-                                      <img  src="img/KAG.png" class="hidden-feature_img" alt="Glazed Vitrified Tiles" />
-                                    </div> 
-                                  </a>
-                                </div>
-                              </div>
-                            </li> 
-
-                            <li class="grid__item item-row wide--one-quarter post-large--one-quarter large--one-quarter medium--one-half small--one-half  medium--one-half small--one-half  " id="product-5617868144802"  id="product-5617868144802">
-                              <div class="products product-hover-11">
-                                <div class="product-container">
-                                  <a>
-                                    <div class="reveal"> 
-                                      <img src="cdn.shopify.com/s/files/1/0437/5671/6194/products/Product17_b781a193-4262-49ef-84e1-b2bf5161710f_large0c78.jpg?v=1597920236" class="featured-image" alt="Giallo Veneziano">
+                                      <img src="img/Gallery/kagtiles/kagtiles12.jpg" class="featured-image" alt="Galaxy Tiles">
                                       <img  src="img/KAG.png" class="hidden-feature_img" alt="Glazed Vitrified Tiles" />
                                     </div> 
                                   </a>
@@ -742,26 +765,78 @@
                                 <div class="product-container">
                                   <a>
                                     <div class="reveal"> 
-                                      <img src="cdn.shopify.com/s/files/1/0437/5671/6194/products/Product18_459ab3cf-f025-4964-8047-161aef3417cf_largeb10c.jpg?v=1597921991" class="featured-image" alt="Rossa Verona">
+                                      <img src="img/Gallery/kagtiles/kagtiles9.jpg" class="featured-image" alt="Galaxy Tiles">
                                       <img  src="img/KAG.png" class="hidden-feature_img" alt="Glazed Vitrified Tiles" />
                                     </div> 
                                   </a>
                                 </div>
                               </div>
-                            </li> 
+                            </li>
+
                             <li class="grid__item item-row wide--one-quarter post-large--one-quarter large--one-quarter medium--one-half small--one-half  medium--one-half small--one-half  " id="product-5617868144802"  id="product-5617868144802">
                               <div class="products product-hover-11">
                                 <div class="product-container">
                                   <a>
                                     <div class="reveal"> 
-                                      <img src="cdn.shopify.com/s/files/1/0437/5671/6194/products/Product4_large029b.jpg?v=1597918738" class="featured-image" alt="Polished Vitrified Tiles">
+                                      <img src="img/Gallery/kagtiles/kagtiles8.jpg" class="featured-image" alt="Galaxy Tiles">
                                       <img  src="img/KAG.png" class="hidden-feature_img" alt="Glazed Vitrified Tiles" />
                                     </div> 
                                   </a>
                                 </div>
                               </div>
-                            </li> 
+                            </li>
 
+                            <li class="grid__item item-row wide--one-quarter post-large--one-quarter large--one-quarter medium--one-half small--one-half  medium--one-half small--one-half  " id="product-5617868144802"  id="product-5617868144802">
+                              <div class="products product-hover-11">
+                                <div class="product-container">
+                                  <a>
+                                    <div class="reveal"> 
+                                      <img src="img/Gallery/SANITARYWARE/SANITARYWARE7.jpg" class="featured-image" alt="Galaxy Tiles">
+                                      <img  src="img/KAG.png" class="hidden-feature_img" alt="Glazed Vitrified Tiles" />
+                                    </div> 
+                                  </a>
+                                </div>
+                              </div>
+                            </li>
+
+                            <li class="grid__item item-row wide--one-quarter post-large--one-quarter large--one-quarter medium--one-half small--one-half  medium--one-half small--one-half  " id="product-5617868144802"  id="product-5617868144802">
+                              <div class="products product-hover-11">
+                                <div class="product-container">
+                                  <a>
+                                    <div class="reveal"> 
+                                      <img src="img/Gallery/kagtiles/AQUAFAUCETS1.jpg" class="featured-image" alt="Galaxy Tiles">
+                                      <img  src="img/KAG.png" class="hidden-feature_img" alt="Glazed Vitrified Tiles" />
+                                    </div> 
+                                  </a>
+                                </div>
+                              </div>
+                            </li>
+
+                            <li class="grid__item item-row wide--one-quarter post-large--one-quarter large--one-quarter medium--one-half small--one-half  medium--one-half small--one-half  " id="product-5617868144802"  id="product-5617868144802">
+                              <div class="products product-hover-11">
+                                <div class="product-container">
+                                  <a>
+                                    <div class="reveal"> 
+                                      <img src="img/Gallery/SANITARYWARE/SANITARYWARE2.jpg" class="featured-image" alt="Galaxy Tiles">
+                                      <img  src="img/KAG.png" class="hidden-feature_img" alt="Glazed Vitrified Tiles" />
+                                    </div> 
+                                  </a>
+                                </div>
+                              </div>
+                            </li>
+
+                            <li class="grid__item item-row wide--one-quarter post-large--one-quarter large--one-quarter medium--one-half small--one-half  medium--one-half small--one-half  " id="product-5617868144802"  id="product-5617868144802">
+                              <div class="products product-hover-11">
+                                <div class="product-container">
+                                  <a>
+                                    <div class="reveal"> 
+                                      <img src="img/Gallery/kkdi41.jpeg" class="featured-image" alt="Galaxy Tiles">
+                                      <img  src="img/KAG.png" class="hidden-feature_img" alt="Glazed Vitrified Tiles" />
+                                    </div> 
+                                  </a>
+                                </div>
+                              </div>
+                            </li>
                           </ul>
                         </div>
                       </div>
